修复退出登录的 CSRF 校验行为
